--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
     </header>
     <main class="">
         <h2>Register A new pet</h2>
-        <p id="petCount">Number of pets registered</p>
+        <p id="petCount"></p>
         <p id="petNames">Pet Names</p>
     </main>
 
