--- a/register.html
+++ b/register.html
@@ -23,6 +23,9 @@
     </header>
     <main class="">
         <h2>Register A new pet</h2>
+        <div id="notifications">
+
+        </div>
         <form class="container">
             <div class="mb-3">
                 <label>Name:</label>
@@ -63,6 +66,15 @@
                     <option value="more than 50lbs">more than 50lbs</option>
                 </select>
                 <!--<input class="form-control form-control-sm" type="text" id="txtType">-->
+            </div>
+            <div class="mb-3">
+                <label>Payment type:</label>
+                <select name="payment" 
+                id="txtPayment">
+                    <option value="cash">cash</option>
+                    <option value="credit card">credit card</option>
+                    <option value="debit card">debit card</option>
+                </select>
             </div>
         </form>
 
