--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./style.css/mystyle.css">
     <title>Document</title>
 </head>
@@ -33,19 +34,23 @@
         </div>
 
         <div class="services-section">
-            <div>
-                <div>
+            <div class="container">
+                <div class="image">
                     <img src="./petPhotos/pexels-kat-smith-551628.jpg" alt="pet photo">
                 </div>
-                <div>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, non?</p>
-                    <ul>
-                        <li>Nail Trimming</li>
-                        <li>Grooming</li>
-                        <li>Vaccines</li>
-                    </ul>
+                <div class="text">
+                    <h1>Testimonial: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt rerum distinctio sequi blanditiis saepe iste, quis quidem nulla, veritatis amet labore nostrum repudiandae facere culpa neque sed aliquam doloremque nobis.</h1>
                 </div>
             </div>
+        </div>
+        <div>
+            <h1>Services we offer</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, non?</p>
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">Nail Trimming</li>
+                <li class="list-group-item">Grooming</li>
+                <li class="list-group-item">Vaccines</li>
+            </ul>
         </div>
 
     </main>
