--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </main>
 
     <footer class="site-footer">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, optio.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, optio. -A latin speaking cat owner</p>
     </footer>
 </body>
 </html>
