--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@
         <div id="notifications">
 
         </div>
-        <form class="container">
+        <form class="reg-container">
             <div class="mb-3">
                 <label>Name:</label>
                 <input class="form-control form-control-sm" 
@@ -59,13 +59,13 @@
             </div>
             <!--bootstrap selects for next 2 divs-->
             <div class="mb-3">
-                <select class="form-select" name="petType" arial-label="Floating label select example" id="txtType">
+                <select class="form-select" name="petType" arial-label="Floating label select example" id="petType">
                 <option selected>Choose a weight range</option>
                 <option value="10lbs or less">10lbs or less</option>
                 <option value="10lbs or more">10lbs or more</option>
                 <option value="more than 50lbs">more than 50lbs</option>
             </select>
-            <label for id="petType">Type:</label>
+            <label for="petType">Type:</label>
             </div>
             <div class="form-floating">
                 <select class="form-select" name="payment" arial-label="Floating label select example" id="txtPayment">
@@ -74,7 +74,7 @@
                 <option value="credit card">credit card</option>
                 <option value="debit card">debit card</option>
             </select>
-            <label for id="txtPayment">Payment type:</label>
+            <label for="txtPayment">Payment type:</label>
             </div>
         </form>
 
