--- a/services.html
+++ b/services.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./style.css/mystyle.css">
     <title>Document</title>
 </head>
 <body>
@@ -21,8 +26,9 @@
         <h2>Services</h2>
         
         <div class="service-form">
-            <label>Services:</label>
+            <label>Service:</label>
             <input type="text" id="txtService">
+            <label>Price:</label>
             <input type="number" id="txtPrice">
             <button id="btnService">Add</button>
         </div>
